k8s/user-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  namespace: training-cicd
  labels:
    app: user-api
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: user-api
