k8s/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: training-cicd
  labels:
    app: web-app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: web-app
